--- a/Przetwonik AC-CA/GUI/GUI.csproj
+++ b/Przetwonik AC-CA/GUI/GUI.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary1\Logic.csproj" />
+  </ItemGroup>
+
 </Project>
