All is done except SNR

--- a/Przetwonik AC-CA/GUI/GUI.csproj
+++ b/Przetwonik AC-CA/GUI/GUI.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\Logic.csproj" />
+    <PackageReference Include="VisioForge.DotNet.Core.TRIAL" Version="15.1.12" />
   </ItemGroup>
 
 </Project>
